JS-3407: hover fix in dark mode

--- a/src/scss/theme/dark/menu.scss
+++ b/src/scss/theme/dark/menu.scss
@@ -259,6 +259,8 @@
 			.icon.arrow { background-image: url('#{$themePath}/arrow/select/big.svg'); }
 		}
         .day:hover { background: #f9d77e; color: #ad8620 !important; }
+        .day.th { color: $colorControlActive !important; }
+        .day.th:hover { background: none; }
         .day.active { color: $colorOrange; }
     }
 
